test/fixtures/complex/invalid/missing_space_after_keyword.mf2
.foo$hello={:foo}
{{}}
=== spans ===
                    .foo$hello={:foo}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                         ^^^^ 1:0-1:4
Pattern                                    1:2-1:2
Text                                       1:2-1:2
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is unrecognized. (at @0..17)
  .foo$hello={:foo}↵{{}}
  ^^^^^^^^^^^^^^^^^
=== formatted ===
(cannot format due to fatal errors)
=== ast ===
ComplexMessage {
    span: @0..22,
    declarations: [],
    body: QuotedPattern {
        span: @18..22,
        pattern: Pattern {
            parts: [
                Text {
                    start: @20,
                    content: "",
                },
            ],
        },
    },
}